# vector-index

./: .gitignore  README.md  benchs.md  pom.xml
src/main/java/ru/mcashesha/: FullBenchmarkRunner.java  IVFIndexBuildBenchmarks.java  IVFIndexSearchBenchmarks.java  VectorIndexBenchmark.java
src/main/java/ru/mcashesha/data/: EmbeddingCsvLoader.java
src/main/java/ru/mcashesha/ivf/: IVFIndex.java  IVFIndexFlat.java
src/main/java/ru/mcashesha/kmeans/: HierarchicalKMeans.java  KMeans.java  KMeansUtils.java  LloydKMeans.java  MiniBatchKMeans.java
src/main/java/ru/mcashesha/metrics/: Metric.java  MetricValidation.java  NativeLibLoader.java  OffsetMetric.java  Scalar.java  SimSIMD.java  VectorAPI.java
src/main/native/: CMakeLists.txt  ru_mcashesha_metrics_SimSIMD.h  simsimd_jni.c
src/test/java/ru/mcashesha/data/: EmbeddingCsvLoaderTest.java
src/test/java/ru/mcashesha/ivf/: IVFIndexFlatBufferReuseTest.java  IVFIndexFlatExtendedTest.java  IVFIndexFlatLayoutTest.java  IVFIndexFlatSearchOptTest.java  IVFIndexFlatTest.java  IVFIndexFlatThreadSafetyTest.java
src/test/java/ru/mcashesha/kmeans/: KMeansAlgorithmicTest.java  KMeansBuilderTest.java  KMeansPrecisionTest.java  KMeansTest.java  KMeansUtilsTest.java
src/test/java/ru/mcashesha/metrics/: MetricConsistencyTest.java  MetricEngineAvailabilityTest.java  MetricValidationTest.java  NativeLibLoaderTest.java  ScalarMetricTest.java  SimSIMDValidationTest.java  VectorAPIPipelineTest.java
